--- a/RuinsEscape2/Config/DefaultGame.ini
+++ b/RuinsEscape2/Config/DefaultGame.ini
@@ -1,10 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=01F75D8E49906E258B0ACA97A2F9EF5F
-ProjectName=Third Person BP Game Template
+ProjectName=RuinsEscape
+CompanyName=PRioMMon Game Studio
+CompanyDistinguishedName=PMGM
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=True
 bMoviesAreSkippable=True
 +StartupMovies=Intro
-
-
